--- a/src/Components/Layouts/main.css
+++ b/src/Components/Layouts/main.css
@@ -16,9 +16,6 @@
 body{
   background-color:#1f232c;
 }
-.calendar{
-  background-color:white;
-}
 .card{
   background-color:#c7c9c8;
   color:#333;
@@ -26,4 +23,69 @@ body{
 .fab{
   color:#82b1ff;
   font-size:1.3em;
+}
+.flexContainer{
+  margin-top:100px;
+  color:red;
+  border-top:1px solid #3b91ad;
+  border-left:1px solid #3b91ad;
+  display:flex;
+  flex-direction:row;
+  flex-wrap:wrap;
+}
+.flexColumn{
+  display:flex;
+  width:14%;
+  border-bottom:1px solid #3b91ad;
+  border-right:1px solid #3b91ad;
+  flex:0 1 auto;
+  justify-content:center;
+}
+.day.inactive{
+  background-color:#f8f8f8;
+  color:#ccc;
+}
+.day.today{
+  background-color:#fcf8e3;
+}
+.day .inner-grid{
+  width:100%;
+  position:relative;
+}
+.day .event-slot{
+  position:relative;
+  margin:.5rem 0;
+  min-height:28px;
+  font-size:14px;
+}
+.day .event-slot.event{
+  background:#3b91ad;
+  color:#3b91ad;
+  white-space:nowrap;
+  text-indent:-10000px;
+  cursor:pointer;
+}
+.day .event-slot .event-title{
+  position:absolute;
+  top:14px/2/2;
+  left:.5rem;
+  z-index:10;
+  color:#fff;
+  z-index:1;
+  overflow:visible;
+  text-indent:0;
+}
+.day .event.event-first-day{
+  margin-left:.5rem;
+  border-top-left-radius:.3rem;
+  border-bottom-left-radius:.3rem;
+}
+.day .event.event-last-day{
+  margin-right:.5rem;
+  border-top-right-radius:.3rem;
+  border-bottom-right-radius:.3rem;
+}
+.day .date{
+  padding:.25rem .5rem;
+  text-align:right;
 }
