--- a/src/Components/Layouts/main.css
+++ b/src/Components/Layouts/main.css
@@ -62,6 +62,7 @@ body{
   background:#3b91ad;
   color:#3b91ad;
   white-space:nowrap;
+  overflow:hidden;
   text-indent:-10000px;
   cursor:pointer;
 }
@@ -72,7 +73,7 @@ body{
   z-index:10;
   color:#fff;
   z-index:1;
-  overflow:visible;
+  overflow:hidden;
   text-indent:0;
 }
 .day .event.event-first-day{
